# secret-hitler-sms

./: .curlrc  .envrc  .gitignore  .pre-commit-config.yaml  .shellcheckrc  .textbeltrc  Dockerfile  \  architecture.md  bootstrap  package-lock.json  package.json  pyproject.toml  roles.txt  serverless.yml  sms.curlrc
assets/: Makefile  _build.sh  player-explanation-hitler.txt  player-explanation-liberal.txt  player-slots.txt  playerinfo-liberal.json
assets/images/: Makefile
scripts/: 01-setup.sh  10-assign-player-roles.sh  10-setup.sh  20-legislate.sh  __lib.bash  __lib.sh  __reset_game_state  __reset_game_state.sh  _lib.sh  assign-player-roles.sh  cog  github_latest.py  initialize-game  initialize-game.sh  initialize-game.test.bats  initialize_game  investigate_party_membership  legislate  legislate.sh  lib.py  lib.sh  peek_policy_deck  peek_policy_deck.sh  send-party-membership-card.sh  setup.sh  sync-static-to-s3
scripts/lib/: deck.bash  deck.sh  deck.test.bats  sms.bash  sms.sh  utils.bash  utils.sh  vars-base-test.sh  vars-base.sh  vars-live.sh  vars-test.sh  vars.bash  vars.sh  vars.test.bats
scripts/test/: initialize-game.bats
secret_hitler_sms/commands/: initialize_game.py  legislate.py  reset_game.py
serverless-config/: dns.yml  functions.py  s3.yml
src/: deps.sh  lib.sh
src/functions/: game-get.sh  (+9 more)
state/: .gitignore
state-example/: README.md
static/: index.html  player-info.example.toml  policies-available.txt  policies-available.yaml  policies.schema.yaml  policies.yaml  roles-available.txt  roles-available.yaml  twilio-empty-response.xml
(+15 files in other folders)
